# VOD_TBD

./: README.md
client/: debug_🦆.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
client/public/: manifest.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/admin/: layout.module.css  layout.tsx
client/src/app/admin/content/: page.tsx  upload.module.css  upload.tsx  uploadContainer.module.css  uploadContainer.tsx
client/src/app/admin/content/[id]/: actions.tsx  metadata.module.css  metadata.tsx  page.module.css  page.tsx  preview.tsx  source.tsx  tagging.module.css  tagging.tsx  (+2 more)
client/src/app/admin/invites/: page.module.css  page.tsx
client/src/app/admin/users/: page.tsx
client/src/app/client/: layout.tsx  page.tsx
client/src/app/client/user/: page.tsx
client/src/app/login/: page.tsx
client/src/app/register/: page.tsx
client/src/components/: ClientProvider.tsx  ContextMenu.module.css  ContextMenu.tsx  Information.module.css  Information.tsx  MultiView.module.css  MultiView.tsx  ProgressBar.module.css  ProgressBar.tsx  Toast.module.css  Toast.tsx  button.module.css  button.tsx  common.module.css  common.tsx  input.module.css  input.tsx
client/src/components/content/: Movie.module.css  Movie.tsx  entity.module.css  entity.tsx
client/src/lib/: admin.ts  client.ts  content.ts  context.tsx  helpers.ts  http.ts  invites.ts  logger.ts  users.ts
client/src/styles/: auth.module.css  common.module.css
misc/: VOD_SITE_LOGO.ai
server/: .gitignore  Cargo.toml  Rocket.toml  TODO.md  debug_🦆.md  example_config.toml
server/src/: macros.rs  main.rs
server/src/api/: mod.rs
server/src/api/content/: get.rs  mod.rs  tagging.rs  tmdb.rs  upload.rs
server/src/api/invite/: invite.rs  mod.rs
server/src/api/user/: auth.rs  login.rs  management.rs  mod.rs
server/src/datatypes/error/: definition.rs  impldef.rs  mod.rs
server/src/managers/: content_manager.rs  db.rs  invite_manager.rs  mod.rs  tag_manager.rs  tmdb_manager.rs  user_manager.rs
server/src/utils/: config.rs  ffmpeg.rs  jwt.rs  mod.rs
(+2 files in other folders)
