[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
thiserror = "1.0.63"

# Validation / json
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }

# Auth
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "7"