[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
thiserror = "1.0.63"
rocket_cors = "0.6.0"

# Validation / json
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }

# Auth
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "7"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# co